Changed securityconfig